maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for(x <- 0 to Largeur-1,y <- 0 to Hauteur-1) {
  ^ShortestPathMaze:40: error: illegal start of simple expression
  } else if ()
             ^ShortestPathMaze:42: error: ')' expected but '}' found.
}
^ShortestPathMaze:56: error: '(' expected but '}' found.
  }
  ^